@@ -19,6 +19,12 @@
       </description>
 
       <component class="bin">
+        <release tarname="gdb-7.3.1-1-mingw32-bin.tar.lzma" >
+          <source tarname="gdb-%-mingw32-src.tar.lzma" />
+          <licence tarname="gdb-%-mingw32-doc.tar.lzma" />
+          <requires eq="mingw32-libexpat-*-mingw32-*-dll-1.tar" />
+          <requires eq="mingw32-libintl-*-mingw32-*-dll-8.tar" />
+        </release>
         <release tarname="gdb-7.3-2-mingw32-bin.tar.lzma" >
           <source tarname="gdb-%-mingw32-src.tar.lzma" />
           <licence tarname="gdb-%-mingw32-doc.tar.lzma" />
@@ -43,6 +49,7 @@
       </component>
 
       <component class="doc">
+        <release tarname="gdb-7.3.1-1-mingw32-doc.tar.lzma" />
         <release tarname="gdb-7.3-2-mingw32-doc.tar.lzma" />
         <release tarname="gdb-7.3-1-mingw32-doc.tar.lzma" />
         <release tarname="gdb-7.2-1-mingw32-doc.tar.lzma" />
